// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders a spinner 1`] = `
.c0 {
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  border: 6px solid #00D9C5;
  border-radius: 50%;
  border-top-color: transparent;
  -webkit-animation: iVXCSc 1.2s linear infinite;
  animation: iVXCSc 1.2s linear infinite;
}

<div
  class="c0"
/>
`;

exports[`<Spinner /> renders negative 1`] = `
.c0 {
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  border: 6px solid #FFFFFF;
  border-radius: 50%;
  border-top-color: transparent;
  -webkit-animation: iVXCSc 1.2s linear infinite;
  animation: iVXCSc 1.2s linear infinite;
}

<div
  class="c0"
/>
`;

exports[`<Spinner /> renders small 1`] = `
.c0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  border: 3px solid #00D9C5;
  border-radius: 50%;
  border-top-color: transparent;
  -webkit-animation: iVXCSc 1.2s linear infinite;
  animation: iVXCSc 1.2s linear infinite;
}

<div
  class="c0"
/>
`;
